Do not try to convert point to root coordinate space when |local_frame_id_| is invalid.

It appears that we might receive IPC which would trigger this code path
while |local_frame_id_| is not valid. It is reasonable to verify the
validity of |local_frame_id_| before passing the SurfaceId to
CrossProcessFrameConnector for point transform.

This CL also attempts to re-enable
SSLUITest.TestUnauthenticatedFrameNavigation with --site-per-process (which was
most probably flaky due to the issue above).

BUG=668913
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_site_isolation

Review-Url: https://codereview.chromium.org/2542463002
Cr-Commit-Position: refs/heads/master@{#435744}